5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1635_1055.log
== TEST (2019-04-10 14:23:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import
v0 = float(input("v0:"))
a = radians(float(input("angulo:")))
D = float(input("d:"))
R = ((v0**2) * (sin(2*a)))/ 9.8
F = abs(R-D)
if (F=<0.1):
	T = "sim"
else:
	T = "nao"
print(T)
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import
v0 = float(input("v0:"))
a = radians(float(input("angulo:")))
D = float(input("d:"))
R = ((v0**2) * (sin(2*a)))/ 9.8
F = abs(R-D)
if (F=<0.1):
	T = "sim"
else:
	T = "nao"
print(T)
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import
v0 = float(input("v0:"))
a = radians(float(input("angulo:")))
D = float(input("d:"))
R = ((v0**2) * (sin(2*a)))/ 9.8
F = abs(R-D)
if (F=<0.1):
	T = "sim"
else:
	T = "nao"
print(T)
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:26:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("v0:"))
a = radians(float(input("angulo:")))
D = float(input("d:"))
R = ((v0**2) * (sin(2*a)))/ 9.8
F = abs(R-D)
if (F=<0.1):
	T = "sim"
else:
	T = "nao"
print(T)
-- ERROR:
File "XXXX", line 10
    if (F=<0.1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:26:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("v0:"))
a = radians(float(input("angulo:")))
D = float(input("d:"))
R = ((v0**2) * (sin(2*a)))/ 9.8
F = abs(R-D)
if (F<=0.1):
	T = "sim"
else:
	T = "nao"
print(T)
-- EXECUTION TIME:
0.275547
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
